correção de migrations

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
 <div class="jumbotron text-center" >
 
 
-    <div class="detail-body">
+    <div class="detail-container">
         <div class="detail-top">
             {% if post.unidade|display_unidade_tag == "VG" %}
             <h1><a >Laboratório {{post.lab}} | <font color="tomato"><b>{{post.unidade|display_unidade_tag}}</b></a></font></h1>
