--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,9 +32,9 @@
             <!-- <a href="https://icons8.com">Icon pack by Icons8</a> -->
 
             <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-            <link rel="stylesheet" href="collapzion.min.css">
+            <!-- <link rel="stylesheet" href="collapzion.min.css">
             <script src="jquery.min.js"></script>
-            <script src="collapzion.min.js"></script>
+            <script src="collapzion.min.js"></script> -->
                         
         </head>
 
