--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -48,7 +48,7 @@
                         </p>
                     {% endfor %}
 
-                    <p>{{posts.create_date|date:"D, d-M-Y"}}</p>
+                    <p>{{posts.name}}, {{posts.create_date|date:"D, d-M-y"}}</p>
 
                     <!-- <img src="https://png.icons8.com/ios-glyphs/50/000000/moon-symbol.png"> -->
                     <!-- <img src="https://png.icons8.com/ios-glyphs/50/000000/sun.png"> -->
