--- a/clinica/templates/base.html
+++ b/clinica/templates/base.html
@@ -28,4 +28,9 @@
     
 </body>
 
+<footer class="container-fluid">
+    <style>p{text-align: center; font-size: 12px;} </style>
+    <p>Denny Erikson &copy; 2019</p>
+</footer>
+
 </html>
