--- a/clinica/templates/clinica/pessoa_list.html
+++ b/clinica/templates/clinica/pessoa_list.html
@@ -57,7 +57,7 @@
                             {{instance.descricao}}&#013;&#013;Status: {{instance.status}}&#013;Data inscrição: {{instance.create_date}}&#013;
                             "
                         
-                        ><i class="glyphicon glyphicon-plus"></i></a></td>
+                        ><i class="glyphicon glyphicon-list"></i></a></td>
                         </div>
                     </td>
                     
