--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,20 +13,21 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     
-            <!-- calendar widget-->
+            <!-- calendar admin widget-->
             <link rel="stylesheet" type="text/css" href="{% static 'admin/css/forms.css' %}"/>
             <link rel="stylesheet" type="text/css" href="{% static 'admin/css/widgets.css' %}"/>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
             <!-- calendar widget-->
     
-    
+             <!-- calendar datetime-input-inwidget-->
             <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
             <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
             <script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
             <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
             <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
             <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
-    
+            <!-- calendar datetime-input widget-->
+
             <link  rel="stylesheet" href="{% static 'css/style.css' %}">
 
             <!-- <a href="https://icons8.com">Icon pack by Icons8</a> -->
