--- a/clinica/templates/clinica/pessoa_create.html
+++ b/clinica/templates/clinica/pessoa_create.html
@@ -1,24 +1,27 @@
 {% extends 'base.html'%}
 {% load widget_tweaks %}
-{% block content %}
 
-<div class="container-form">
-    <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-  
-      {% for hidden in form.hidden_fields %}
-        {{ hidden }}
-      {% endfor %}
-  
-      <style>
-          .form-group{
+
+{% block content %}
+  <div class="container-form">
+      <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+    
+        {% for hidden in form.hidden_fields %}
+          {{ hidden }}
+        {% endfor %}
+    
+        <style>
+            .form-group{
               width: 95%;
               margin: 0 3% 0
-          }
-      </style>
-      <div class="form-group">
-              <h2>Cadastrar</h2>
-              {% for field in form.visible_fields %}
+            }
+        </style>
+
+        <div class="form-group">
+            <h2>Cadastrar</h2>
+            <!-- {{ form.data_nasc|add_class:"datetime-input" }} -->
+            {% for field in form.visible_fields %}
               <div class="form-group">
                 <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                 {{ field|add_class:'form-group' }}
@@ -28,17 +31,115 @@
                 {% endfor %}
               </div>
             {% endfor %}
-            <br>
-      </div>
+          <br>
+        </div>
       
-  
-      <div class="form-group">
-        <button type="submit" class="btn btn-success">
-          <span class="glyphicon glyphicon-ok"></span> Save
-        </button>
-        <a href="/clinica" class="btn btn-default">Cancel</a>
-      </div>
-    </form>
-</div>
-  
+    
+        <div class="form-group">
+          <button type="submit" class="btn btn-success">
+            <span class="glyphicon glyphicon-ok"></span> Save
+          </button>
+          <a href="/clinica" class="btn btn-default">Cancel</a>
+        </div>
+      </form>
+
+  </div>
+
+  <script>
+      $(function () {
+          $('.datetime-input').datetimepicker({
+              format:'YYYY-MM-DD',
+          })
+      });
+      
+      $(function () {
+
+      // Oculta as opções do segundo select:
+      $("#t-shift option").hide();
+
+      // Observa o evento change do primeiro select:
+      $("#p-shift").on("change", function () {
+
+      // Recupera o valor selecionado:
+      let course = $("#p-shift").val();
+      
+      // Oculta as opções atuais:
+      $("#t-shift option").hide();
+      
+      // Exibe as opções conforme a seleção:
+      $("#t-shift option[data-course="+ course +"]").show();
+
+      });
+
+      });                          
+
+  </script>
+
+      <!-- Consumir API dos VIACEP com Javascript https://viacep.com.br/exemplo/javascript/-->
+      <script type="text/javascript" >
+    
+        function limpa_formulário_cep() {
+                //Limpa valores do formulário de cep.
+                document.getElementById('id_linha1').value=("");
+                document.getElementById('id_linha2').value=("");
+        }
+    
+        function meu_callback(conteudo) {
+            if (!("erro" in conteudo)) {
+                //Atualiza os campos com os valores.
+                document.getElementById('id_linha1').value=(conteudo.logradouro +' - '+ conteudo.bairro +', Nº ');
+                document.getElementById('id_linha2').value=(conteudo.localidade +' - '+  conteudo.uf);
+    
+            } //end if.
+            else {
+                //CEP não Encontrado.
+                limpa_formulário_cep();
+                alert("CEP não encontrado.");
+            }
+        }
+            
+        function pesquisacep(valor) {
+    
+            //Nova variável "cep" somente com dígitos.
+            var cep = valor.replace(/\D/g, '');
+    
+            //Verifica se campo cep possui valor informado.
+            if (cep != "") {
+    
+                //Expressão regular para validar o CEP.
+                var validacep = /^[0-9]{8}$/;
+    
+                //Valida o formato do CEP.
+                if(validacep.test(cep)) {
+    
+                    //Preenche os campos com "..." enquanto consulta webservice.
+                    document.getElementById('id_linha1').value="...";
+                    document.getElementById('id_linha2').value="...";
+         
+    
+                    //Cria um elemento javascript.
+                    var script = document.createElement('script');
+    
+                    //Sincroniza com o callback.
+                    script.src = 'https://viacep.com.br/ws/'+ cep + '/json/?callback=meu_callback';
+    
+                    //Insere script no documento e carrega o conteúdo.
+                    document.body.appendChild(script);
+    
+                } //end if.
+                else {
+                    //cep é inválido.
+                    limpa_formulário_cep();
+                    alert("Formato de CEP inválido.");
+                }
+            } //end if.
+            else {
+                //cep sem valor, limpa formulário.
+                limpa_formulário_cep();
+            }
+        };
+    
+        </script>
+        <!-- Consumir API dos VIACEP com Javascript -->
+
 {% endblock %}
