refatoração de envio de email, ajustes de no filtro por data

--- a/blog/templates/blog/emails/novo_agendamento.html
+++ b/blog/templates/blog/emails/novo_agendamento.html
@@ -23,17 +23,20 @@
         {% endfor %}<br>
         
         Unidade:{{unidade|display_unidade_tag}}, <br>
-        Data:{{create_date|date:"D, d-M-y"}}, <br>
+        Data:{{create_date}}, <br>
         Detalhes:{{details}}, <br>
     
     </h4>
 
     <p>
+        Este e-mail é automático, favor não responder o mesmo.<br> 
         Pedimos que em caso de erro ou divergência nas informações 
-        entre em contato conosco nos telefones. <br> E-mail automático, favor não responder o mesmo.     
+        entre em contato conosco.     
     </p>
     <p>Atenciosamente.</p>
-    <p>TIFAT</p>
-    <p>VG - (12) 3625-4937 | CS - (12) 3634-4146 </p>
+    <p>TIFAT
+        <br>
+        tifat@anhanguera.com
+    </p>
 </body>
 </html>
